2010-06-14  Chris Morley
	
	* data/atomtyp.txt: add IMPVAL for triply bonded O+ (for carbon
	monoxide). 
	
	* src/formats/xml/cmlformat.cpp(ReadMolecule): leave processing
	of hydrogenCount attributes until the structure is complete, so
	that explict H can count towards them. Also now handles 
	hydrogenCount=0. Fixes bug #3014855 (Daniel Lowe).
	
	Change specification URI. Clarify implicit H behaviour in description.
	
	* src/obconversion.cpp: temporarily reintroduce the lineend
	memory leak. It was crashing with CML input, which doesn't
	even use the line end buffer!

2010-06-14  Noel O'Boyle

	* src/graphsym.cpp: Fix my fix to memory leak (get rid of 'new')

2010-06-14  Noel O'Boyle

	* Add target "make docs" to make the Doyxgen docs: $ROOT/doc/Doxyfile.in
	is converted to $ROOT/Doxyfile by substituting the $BABEL_VERSION and
	the PATH to Dot.

2010-06-13  Noel O'Boyle

	* src/formats/pdbformat.cpp: Applying Richard Hall's patch to fix
	handling of CONECT records where bond order was split over two lines.
	This can occur, for example, with the sulfur in RS(=O)(=O)R'.

2010-06-13  Noel O'Boyle

	* src/obconversion.cpp: Applying Tim's patch to fix memory leak

2010-06-13  Jean Brefort  <jean.brefort@normalesup.org>

	* src/math/spacegroup.cpp: make import more flexible.

2010-06-11  Noel O'Boyle

	* windows-vc2008/*default_build.bat: Add quotation marks around %CD%
	to handle case where path to current directory contains a space.

2010-06-11  Noel O'Boyle

	* src/graphsym.cpp: Fix memory leak (use of 'new' without
	corresponding 'delete')

2010-06-11  Chris Morley

	* src/descriptor.cpp(ParsePredicate): Before doing a numeric comparison,
	ensure the the filter string contains a number only. Fixes #3014398
	
	* src/formats/mdlformat.cpp: Added an option to read only the title
	and the format to produce molecules with zero atoms.
	Useful for fast selection by title from a sd file(UNIX line endings only):
	  babel all-sdf.sdf -ocopy out.sdf --filter "title=1str*" -at